--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@radix-ui/react-switch": "^1.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^6.1.1",
     "input-otp": "^1.4.2",
     "jodit-react": "^5.2.25",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "recharts": "^3.2.1",
+    "sonner": "^2.0.7",
     "sweetalert2": "^11.23.0",
     "tailwind-merge": "^3.3.1"
   },
