--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.2.0",
     "react-responsive": "^10.0.1",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
