--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "input-otp": "^1.4.2",
     "jodit-react": "^5.2.25",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^16.1.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
